--- a/layouts/partials/movie-list.html
+++ b/layouts/partials/movie-list.html
@@ -1,7 +1,9 @@
-<ul>
-  {{ range sort .Pages ".Params.Date" "desc"}}
-  <li class="movie-list-item">
-   {{ partial "movie-card.html" .}}
-  </li>
-  {{ end }}
-</ul>
+<div class="container">
+  <ul>
+    {{ range sort .Pages ".Params.Date" "desc"}}
+    <li class="movie-list-item">
+      {{ partial "movie-card.html" .}}
+    </li>
+    {{ end }}
+  </ul>
+</div>
